# volume-control

./: .gitignore  .pre-commit-config.yaml  README.md  gen_docs.sh  pypi_upload.sh  pyproject.toml  release_notes.rst  temp.py  tmp_pyproject.toml
doc_gen/: conf.py  index.rst
docs/: README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
pyvolume/: __init__.py  mod.py  module.py  pyvolume.py
