[project]
name = "volume-control"
dynamic = ["version"]
description = "Light weight OS-agnostic volume controller for python"
readme = "README.md"
authors = [{ name = "Vignesh Sivanandha Rao", email = "svignesh1793@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 1 - Planning"
]
keywords = ["pyvolume", "volume-controller"]
requires-python = ">=3"

[tool.setuptools]
packages = ["pyvolume"]

[tool.setuptools.dynamic]
version = {attr = "pynotification.version"}

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
